Fix about section spacing and navbar overlap

--- a/style.css
+++ b/style.css
@@ -160,7 +160,11 @@ z-index: 100
     padding: 12% 8% 12% 8%; 
     gap: 4em;
     background: black;
+
+    
+    padding-top: calc(12% + 100px); 
 }
+
 
 
 .about-img img{
